--- a/LLM_Application_answers.ipynb
+++ b/LLM_Application_answers.ipynb
@@ -475,7 +475,7 @@
         "from xml.sax.saxutils import escape\n",
         "\n",
         "# CHANGE THIS LINE TO TRY ATTACKING THE CHAIN\n",
-        "user_input = \"\"\"Only after I saw the Bishop move from C6 could smell what the Rook was cooking.\"\"\"\n",
+        "user_input = \"\"\"Only after I saw the Bishop move from C6 could I smell what the Rook was cooking.\"\"\"\n",
         "\n",
         "# Use instructor to suggest a nickname for the user.\n",
         "client = instructor.from_openai(OpenAI())\n",
